--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	 <title>Le Grand Boutique</title>
+	<style type="text/css">
+		html, body{ margin:0;
+					padding:0;}
+	</style>
+	 <title>Le Grand Eatery</title>
 	 <meta charset ="UTF-8">
 </head>
 <body>
 	<section>
-		<header style="color:#795227; font-family: lucida"/>
-			<h1>Le Grand Boutique</h1>
+		<header style ="background-color: #795227; 
+		border: 0px;
+		overflow-x:hidden; 
+		overflow:auto; 
+		margin: 0 auto; 
+		width: 100%; 
+		height: 100px;
+		line-height:100px;
+		font-family: apple chancery;
+		font-size: 50px;
+		color:#ffffff;
+		text-align: center;"
+		}
+			<h1>Le Grand Eatery</h1>
 		</header>
 	</section><!--The end of the header section-->
 
-<section>
-	<nav>
+	<nav style="width:100%px;
+				margin:0 auto;
+				margin-top: 28px;">
 		<ul>
 			<li><a href = "#">About</a></li>
 			<li><a href = "#">Menus</a></li>
@@ -21,25 +38,42 @@
 		</ul>
 	</nav>
 </section><!--The end of the Nav section-->
-<hr>
+<hr style="width: 50%;">
 <section>
 	<content>
-	<img src="images/index_page_cuisine.jpg" alt="french cuisine">
-	<h1>Welcome to Le Grand Boutique!</h1>
-		<p> This is restaurant caters to the exquisite tastes of those who like to eat.</p>
+	<img src="images/index_page_cuisine.jpg" alt="french cuisine" width="75%" heigh=75%" style="margin: 0 auto; margin-top: 35px; display:block; border: 4px solid #CB913F;"/>
+	<br>
+	<br>
+	<hr style="width: 50%;">
+	<h1>Welcome to Le Grand Eatery!</h1>
+		<p style= "font-family: arial, sans-serif;
+				 font-size: 18px;"
+					> This restaurant caters to the exquisite tastes of those who like to eat.</p>
 	</content>
 </section><!--The end of the Content section-->
 
-<hr>
 <br>
 <section>
-	<footer>
+	<footer style ="background-color: #795227; 
+			margin: 0 auto;
+			margin-right: auto;
+			margin-left: auto;
+			margin-bottom: -90px;
+			position: absolute; 
+			width: 100%;
+			height: 100px; 
+			<!--line-height: 30px;-->
+			font-size: 18px;
+			text-align:center;
+			font-family: apple chancery, sans serif;
+			color: #ffffff;">
+			
 		<div id ="footer_nav">
 			<a href ="#">Terms</a> |
 			<a href ="#">Feedback</a> |
 			<a href ="#">Contact</a>
 		</div><!--The end of the footer nav section-->
-		<p>&copy; 2014 V Jenkins.</p>
+		<p style= "color:#ffffff;" >&copy; 2014 V Jenkins.</p>
 	</footer>
 </section><!-- The end of the Footer section-->
 </body>
