--- a/index.html
+++ b/index.html
@@ -1,80 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		html, body{ margin:0;
-					padding:0;}
-	</style>
-	 <title>Le Grand Eatery</title>
+	 <title>Le Grand Courtois</title>
 	 <meta charset ="UTF-8">
-</head>
-<body>
-	<section>
-		<header style ="background-color: #795227; 
-		border: 0px;
-		overflow-x:hidden; 
-		overflow:auto; 
-		margin: 0 auto; 
-		width: 100%; 
-		height: 100px;
-		line-height:100px;
-		font-family: apple chancery;
-		font-size: 50px;
-		color:#ffffff;
-		text-align: center;"
-		}
-			<h1>Le Grand Eatery</h1>
-		</header>
-	</section><!--The end of the header section-->
+</head><!--The end of the Head section-->
 
-	<nav style="width:100%px;
-				margin:0 auto;
-				margin-top: 28px;">
+<body>
+	<header>
+		<h1>Le Grand Courtois</h1>
+	</header><!--The end of the header section-->
+		
+	<nav>
 		<ul>
 			<li><a href = "#">About</a></li>
 			<li><a href = "#">Menus</a></li>
 			<li><a href = "#">Wines</a></li>
+			<li><a href = "#">Chefs</a></li>
 			<li><a href = "#">Reservations</a></li>
 		</ul>
-	</nav>
-</section><!--The end of the Nav section-->
-<hr style="width: 50%;">
-<section>
-	<content>
-	<img src="images/index_page_french_cuisine.jpg" alt="french cuisine" width="65%" heigh=65%" style="margin: 0 auto; margin-top: 35px; display:block; border: 4px solid #CB913F;"/>
+	</nav><!--The end of the Nav section-->
+	
+	<hr>
+	
+	<section>
+	<img src="images/index_page_french_cuisine.jpg" alt="french cuisine" width="65%" heigh=65/>
 	<br>
-	<br>
-	<hr style="width: 50%;">
-	<h1>Welcome to Le Grand Eatery!</h1>
-		<p style= "font-family: arial, sans-serif;
-				 font-size: 18px;"
-					> This restaurant caters to the exquisite tastes of those who like to eat.</p>
-	</content>
-</section><!--The end of the Content section-->
+	
+	<hr>
+		<main>
+			<h1>Welcome to Le Grand Courtois!</h1>
+			<p>Our restaurant caters to the exquisite tastes of those who love French cuisine. Our Chefs use only the freshest ingredients to create their masterpieces. Come, join us and taste these delicacies for yourselves.</p>
+		</main>
+	</section><!--The end of the Main Content section-->
 
-<br>
-<section>
-	<footer style ="background-color: #795227; 
-			margin: 0 auto;
-			margin-right: auto;
-			margin-left: auto;
-			margin-bottom: -90px;
-			position: absolute; 
-			width: 100%;
-			height: 100px; 
-			<!--line-height: 30px;-->
-			font-size: 18px;
-			text-align:center;
-			font-family: apple chancery, sans serif;
-			color: #ffffff;">
-			
+	<br>
+	<footer>
 		<div id ="footer_nav">
 			<a href ="#">Terms</a> |
 			<a href ="#">Feedback</a> |
 			<a href ="#">Contact</a>
 		</div><!--The end of the footer nav section-->
-		<p style= "color:#ffffff;" >&copy; 2014 V Jenkins.</p>
-	</footer>
-</section><!-- The end of the Footer section-->
+		<p>&copy; 2014 V Jenkins.</p>
+	</footer><!-- The end of the Footer section-->
 </body>
 </html>
